plugins {
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.0.7'
}

group 'br.ufop.brTomaz'
version '1.0-SNAPSHOT'

sourceCompatibility = 11
targetCompatibility = 11

repositories {
    mavenCentral()
    jcenter()
}

javafx {
    version = '12'
    modules = [ 'javafx.controls', 'javafx.fxml' ]
}

mainClassName = "br.ufop.brTomaz.application.Program"

applicationDefaultJvmArgs = ["--add-exports=javafx.graphics/com.sun.javafx.stage=ALL-UNNAMED",
                             "--add-exports=javafx.graphics/com.sun.javafx.util=ALL-UNNAMED",
                             "--add-opens=javafx.controls/javafx.scene.control.skin=ALL-UNNAMED",
                             "--add-exports=javafx.graphics/com.sun.javafx.scene=ALL-UNNAMED",
                             "--add-opens=javafx.graphics/javafx.css=ALL-UNNAMED",
                             "--add-exports=javafx.controls/com.sun.javafx.scene.control.behavior=ALL-UNNAMED",
                             "--add-exports=javafx.base/com.sun.javafx.binding=ALL-UNNAMED",
                             "--add-exports=javafx.base/com.sun.javafx.event=ALL-UNNAMED"

]

dependencies {
    testCompile group: 'junit', name: 'junit', version: '4.12'
    compile group: 'org.postgresql', name: 'postgresql', version: '42.2.8'
    compile group: 'com.jfoenix', name: 'jfoenix', version: '9.0.9'
    compile 'de.jensd:fontawesomefx-materialicons:2.2.0-9'
    compile group: 'org.jfxtras', name: 'jfxtras-controls', version: '10.0-r1'
    compile group: 'com.itextpdf', name: 'itextpdf', version: '5.5.13.1'
}


